--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ h1 {
 
 #timer {
     font-size: 1.3em;
-    color: #fff;
+    color: #ffd700;
     margin: 10px 0;
     font-weight: bold;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
